--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3.3.2"
+actix-cors = "0.3.0"
 dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
