--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ actix-web = "3.3.2"
 actix-cors = "0.3.0"
 dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
+postgres = "0.19.1"
